# Prahari

./: .gitignore  HOW_TO_RUN.txt  README.md  pyproject.toml  requirements.txt
scam-shield/: .gitignore  README.md
scam-shield/apps/android/: README.md
scam-shield/apps/android/app/: build.gradle.kts
scam-shield/apps/dashboard/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scam-shield/apps/dashboard/src/: App.tsx  format.ts  theme.css  (+1 more)
scam-shield/docs/: ARCHITECTURE.md
scam-shield/docs/stages/: README.md  STAGE-1-ui-redesign.md  STAGE-2-interactivity-account-alerts.md  STAGE-3-live-call-simulator.md  STAGE-4-ai-claude-reasoning.md
scam-shield/infra/: .env.example  docker-compose.yml
scam-shield/services/api/: Dockerfile  README.md  pyproject.toml
scam-shield/services/api/app/: main.py
scam-shield/services/api/app/core/: config.py  deps.py  security.py
scam-shield/services/api/app/domain/: models.py
scam-shield/services/api/app/realtime/: broker.py  memory_broker.py  redis_broker.py
scam-shield/services/api/app/repositories/: base.py  memory.py  sql.py
scam-shield/services/api/app/routes/: analysis.py  auth.py  calls.py  reports.py  ws.py
scam-shield/services/api/app/schemas/: api.py
scam-shield/services/api/app/services/: analysis_service.py  report_service.py
scam-shield/services/api/tests/: conftest.py  test_analysis.py  test_auth.py  test_ws.py
src/prahari/: __init__.py  cli.py  config.py
src/prahari/api/: __init__.py  schemas.py  server.py
src/prahari/data/: __init__.py  load.py
src/prahari/features/: __init__.py  red_flags.py  text_features.py
src/prahari/generator/: __init__.py  templates.py
src/prahari/models/: __init__.py  evaluate.py  pipeline.py  predict.py  train.py
tests/: conftest.py  test_api.py  test_data_load.py  test_generator.py  test_multilingual.py  test_predict.py  test_red_flags.py  test_text_features.py
(+33 files in other folders)
