[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scamshield-api"
version = "0.1.0"
description = "ScamShield FastAPI backend (auth, live WS ingest, analysis, reports)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "scamshield-ai>=0.1.0",
]

[project.optional-dependencies]
# Production integrations — the app runs without them (in-memory fallbacks).
postgres = ["sqlalchemy[asyncio]>=2.0", "asyncpg>=0.29"]
redis = ["redis>=5.0"]
reports = ["reportlab>=4.0"]
dev = ["pytest>=8.3", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
